syntax = "proto3";

package grpc;
option go_package = "github.com/m4slah/redroc/proto";

// when a user requests to download, we'll need the photo_uid to get the full
// picture to the user will need to update metadata accordingly, use
// UpdateMetadataRequest in metadata.proto

message GetThumbnailImagesRequest {
  // if keyword=="latest", return recent photo
  // in the service, we will update metadata such as download_times accordingly
  string search_keyword = 1;
}

message GetThumbnailImagesResponse {
  // get the storage image-serving address and return
  repeated string storage_url = 1;
}

service GetThumbnail {
  /*
    RPC for getting the UIDs of images relevant to the keyword
   */
  rpc GetThumbnail(GetThumbnailImagesRequest)
      returns (GetThumbnailImagesResponse);
}
